# Vulkan

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini
cmake/: cmake_settings.cmake  compiler_settings.cmake
content/config/: ShadersDescripton.json
content/shaders/: ImGui.hlsl  WaveFront.hlsl
source/: Main.cpp
source/HAL/: CMakeLists.txt
source/HAL/include/: AdapterImpl.hpp  ComPtr.hpp  CommandAllocatorImpl.hpp  CommandListImpl.hpp  CommandQueueImpl.hpp  DescriptorTableLayoutImpl.hpp  DeviceImpl.hpp  FenceImpl.hpp  InstanceImpl.hpp  MemoryAllocator.hpp  PipelineCache.hpp  PipelineImpl.hpp  RenderPassImpl.hpp  ShaderCompilerImpl.hpp  ShaderModule.hpp  SwapChainImpl.hpp
source/HAL/interface/HAL/: Adapter.hpp  ComPtr.hpp  CommandAllocator.hpp  CommandList.hpp  CommandQueue.hpp  Compiler.hpp  DescriptorTableLayout.hpp  Device.hpp  Fence.hpp  Instance.hpp  InternalPtr.hpp  Pipeline.hpp  PipelineState.hpp  RenderPass.hpp  ShaderCompiler.hpp  SwapChain.hpp
source/HAL/source/: AdapterImpl.cpp  CommandAllocatorImpl.cpp  CommandListImpl.cpp  CommandQueueImpl.cpp  DescriptorTableLayoutImpl.cpp  DeviceImpl.cpp  FenceImpl.cpp  InstanceImpl.cpp  MemoryAllocator.cpp  PipelineCache.cpp  PipelineImpl.cpp  RenderPassImpl.cpp  ShaderCompilerImpl.cpp  ShaderCompilerImpl.hpp  ShaderModule.cpp  SwapChainImpl.cpp
